# HarvesterSiloACS

./: CMakeLists.txt
src/: HarvesterSiloACS.cpp  HarvesterSiloACS.h  StereoVision.h  TraceGrainStream.h
src/AnalyzeDepth/: AnalyzeDepth.cpp  AnalyzeDepth.h
src/ComputeAreaAndCentralPoint/: ComputeAreaAndCentralPoint.cpp  ComputeAreaAndCentralPoint.h
src/ProcessImage/: AvgSection.cpp  AvgSection.h  ProcessImage.cpp  ProcessImage.h
src/Timer/: Timer.cpp  Timer.h
src/Utils/IOFile/: IOFile.cpp  IOFile.h
src/Utils/Logger/: Logger.h
src/Utils/ParseParams/: ParameterParser.cpp  ParameterParser.h
